Bug 342188 - Bad font rendering & unsaved profile
Summary: Bad font rendering & unsaved profile
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: font (other bugs)
Version First Reported In: 3.0.0
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-24 12:05 UTC by Davide Marcelli
Modified: 2015-07-04 04:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Davide Marcelli 2014-12-24 12:05:38 UTC
Every time I open konsole the fonts are bad rendered, are small and cut and the cursor is in a wrong position. (http://imgur.com/eNWYjb2)
Change the font and the size "resolve" the problem but when Konsole is closed the settings aren't saved, so everytime I open the application I have to change again font and size.

Reproducible: Always

Steps to Reproduce:
1.Open Konsole
2.Change settings
3.Close Konsole

Actual Results:  
Settings not saved.

Expected Results:  
Settings saved.
Comment 1 Martin Sandsmark 2015-06-07 14:24:11 UTC
if you launch konsole from for example xterm, do you get a warning like this?: «The font for use in the terminal has not been matched exactly. Perhaps it has not been found properly.»
Comment 2 Martin Sandsmark 2015-06-21 13:33:13 UTC
it seems like the frameworks version of konsole never saves the default profile, for some reason. I'm trying to fix that now.

The bad font rendering I think is unrelated, but I'll try to fix that afterwards.
Comment 3 Martin Sandsmark 2015-06-21 16:01:58 UTC
ok, found a workaround while I try to fix it properly; open ~/.config/konsolerc and remove the DefaultProfile entry (it should be something like «DefaultProfile=»), that should fix it.
Comment 4 Martin Sandsmark 2015-07-04 04:12:19 UTC
Git commit 4ec5d3092d6cbda5ccfb838e2ef71f6d650b5ac4 by Martin T. H. Sandsmark.
Committed on 04/07/2015 at 04:11.
Pushed by sandsmark into branch 'master'.

Fix storing of profile when no profile loaded.

If for some reason no profile is loaded, i. e. only the built-in
fallback default values are used, we need to create a new profile to
ensure that changes to the profile are actually persisted.

This has worked more or less by chance for most people so far, because
the default is to load the Shell.profile that is shipped with Konsole.
But if for example the konsolerc config file has an empty value for
DefaultProfile it will load the builtin fallback profile, which can't be
saved.
REVIEW: 124142

M  +2    -2    src/Profile.cpp
M  +35   -3    src/ProfileManager.cpp

http://commits.kde.org/konsole/4ec5d3092d6cbda5ccfb838e2ef71f6d650b5ac4